--- a/LaboratoryInformationSystem/LaboratoryInformationSystem.csproj
+++ b/LaboratoryInformationSystem/LaboratoryInformationSystem.csproj
@@ -153,12 +153,24 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DAO\BaseDAO.cs" />
     <Compile Include="DAO\CustomReader.cs" />
+    <Compile Include="DAO\DictionaryDAO.cs" />
+    <Compile Include="DAO\EmployeesDAO.cs" />
     <Compile Include="DAO\PatientsDAO.cs" />
+    <Compile Include="DAO\UserDAO.cs" />
+    <Compile Include="Enums\DictionaryTypesEnum.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IDAO\IDictionaryDAO.cs" />
+    <Compile Include="IDAO\IEmployeesDAO.cs" />
+    <Compile Include="IDAO\IHistoryPersonalDataDAO.cs" />
     <Compile Include="IDAO\IPatientsDAO.cs" />
+    <Compile Include="IDAO\IUserDAO.cs" />
+    <Compile Include="Models\DictionaryModel.cs" />
+    <Compile Include="Models\EmployeeModel.cs" />
+    <Compile Include="Models\HistoryPersonalData.cs" />
     <Compile Include="Models\PatientModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
